v 2.1.0rc1
==========
Switch default encode_maps_as_lists_in_tables to "DATAAPIMAPS" (no observable changes w.r.t. previous releases)
Bugfix: fix paykload encoding for empty maps/DataAPIMaps
User-defined types in tables:
    - type management: `CreateTypeDefinition`, `ListTypeDescriptor`, `AlterTypeOperation`, `AlterTypeAddFields` and `AlterTypeRenameFields` classes
    - type management: Database's `create_type`, `list_type_names`, `list_types`, `alter_type` and `drop_type` methods
    - full support for UDTs in table ddl: `Database.create_table()`/`Database.list_tables()`/`table.definition()`
    - UDT support in tables: introduced `serializer_by_class` and `deserializer_by_udt` serdes options
    - UDT support in tables: introduced `DataAPIDictUDT` default dict-wrapper type
Tables, all index creation methods support a `definition` parameter, alternatively to the "column[+options]" call pattern
Tables, support for "text indexes":
    - classes `TableTextIndexDefinition` and `TableTextIndexOptions` (e.g. for `list_indexes()` method)
    - tables got a `.create_text_index()` method
Tables, introduced method `list_indexes()`
Cursors (all types): introduced the "pagination API":
    - `.fetch_next_page()` method
    - `initial_page_state` cursor constructor parameter / builder interface method
Admin, renamed 'region_name' ==> `name` in `AstraDBAdminDatabaseRegionInfo` and `AstraDBAvailableRegionInfo` (the old name kept as a deprecated alias)
Introduced the notion of 'passthrough columns' to cover all of the cql-only partially/completely unsupported columns in the read/schema-read path
Fix: methods `drop_[collection|table]` of `[Async]Database`, and their Collection/Table sugar methods, now consistently return None.
AstraDBAdmin: introduced `[async_]find_available_regions()` method (and related response objects)
embedding/reranking models' "API support status":